@@ -1,3 +1,5 @@
+8/19/10 fiddle with horizontal spacing between bars so that they are close to being aligned with terms in reaction equations
+8/19/10 center 3 bars in concentration graph
 8/19/10 restructure the scenegraph for concentration graph, so that it will be easier to change bar locations
 8/19/10 tweaks to spacing and justification in control panels
 8/19/10 change magnifying glass icon to show solution color and some molecules
